--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+ <!--обовязково добавити сюди мета теги. таповн й опис сторінки.-->
 <meta charset="UTF-8">
 <title>Koliasa GmbH & Co</title>
 <meta name="COMPUTE ENGINE" />
